add homepage and deployment scripts to package.json

--- a/package.json
+++ b/package.json
@@ -2,13 +2,16 @@
   "name": "snake-game",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://saidaniamine12.github.io/snake-game",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "prettier": "npx prettier . --write"
+    "prettier": "npx prettier . --write",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
@@ -25,6 +28,7 @@
     "eslint": "^9.17.0",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
+    "gh-pages": "^6.3.0",
     "globals": "^15.14.0",
     "prettier": "3.4.2",
     "typescript": "~5.6.2",
