fix: update homepage URL in package.json

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "snake-game",
   "private": true,
   "version": "0.0.0",
-  "homepage": "https://saidaniamine12.github.io/snake-game/",
+  "homepage": "https://saidaniamine12.github.io",
   "type": "module",
   "scripts": {
     "dev": "vite",
